hiding dashboard on load to avoid flicker in default theme

--- a/wwwroot/themes/Default/theme.scss
+++ b/wwwroot/themes/Default/theme.scss
@@ -12,6 +12,7 @@ body {
 }
 
 .dashboard {
+    visibility: hidden;
     $baseSize: 3.75rem;
     width:100%;
     display: flex;
